--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.13.1'
-    implementation 'org.jetbrains:annotations:20.1.0'
-    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+    implementation 'junit:junit:4.13.2'
+    implementation 'org.jetbrains:annotations:23.0.0'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
+    implementation('com.opencsv:opencsv:5.7.1')
 }
 
 test {
